# Corporate-Analysis-System

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aura_backup_before_py312.yml  pyproject.toml
.github/workflows/: ci.yml
configs/agent/: committee.yaml  graph.yaml  tools.yaml
configs/data/: ecos.yaml  news.yaml  ts2000.yaml
configs/market/: kosdaq.yaml  kospi.yaml
configs/model/: ebm.yaml  ensemble.yaml  lightgbm.yaml  tabpfn.yaml
configs/runtime/: analysis.yaml
data/input/companies/: sample-company.yaml
data/input/ts2000_43_model_ready/: ts2000_43__feature_metadata.csv  ts2000_43__master.csv  ts2000_43__summary.csv  ts2000_43_feature_list.json  xgb_id_test.csv  xgb_id_train.csv  xgb_id_valid.csv  xgb_test_model_ready.csv  xgb_train_model_ready.csv  xgb_valid_model_ready.csv
data/raw/: README.md
docs/: agent_graph.md  architecture.md  data_dictionary_ts2000.md  feature_spec.md  rating_normalization.md  security_policy.md  ts2000_dashboard_mvp_design.md  ts2000_dashboard_quickstart_ko.md
models/: best_params_kosdaq.csv  best_params_kospi.csv  feature_cols_kosdaq.csv  feature_importance_kosdaq.csv  feature_importance_kospi.csv
scripts/: build_dataset.py  build_ts2000_column_dictionary_workbook.mjs  evaluate.py  export_dashboard_inputs.py  export_dashboard_model_artifacts.py  prepare_ts2000_dataset_exports.py  run_agent.py  run_ts2000_dashboard.py  train_market_model.py  train_ts2000_core30_xgboost.py
src/: XGBoost.py  streamlit_UI.py
src/bfd/: __init__.py
src/bfd/agents/: graph.py  state.py
src/bfd/agents/committee/: devils_advocate.py  nominal_group.py  six_hats.py  step_ladder.py
src/bfd/agents/nodes/: base_prediction_node.py  committee_node.py  data_node.py  feature_node.py  macro_overlay_node.py  news_overlay_node.py  report_node.py
src/bfd/agents/tools/: data_tools.py  feature_tools.py  macro_tools.py  prediction_tools.py  rag_tools.py  reporting_tools.py  validation_tools.py
src/bfd/data/: alignment.py  schemas.py  splitters.py
src/bfd/data/loaders/: ecos.py  news.py  ratings.py  ts2000.py
src/bfd/features/: balance_sheet.py  cash_flow.py  equity_changes.py  footnotes.py  income_statement.py  macro.py  registry.py
src/bfd/models/: base.py  calibration.py  ebm_model.py  ensemble.py  lightgbm_model.py  registry.py  tabpfn_model.py
src/bfd/rag/: ingestion.py  llm_features.py  retrieval.py
src/bfd/rag/internal_info/: policy.py  redaction.py
src/bfd/ratings/: agencies.py  normalize.py  targets.py
src/bfd/reporting/: audit_trail.py  explanations.py  export.py
src/bfd/utils/: logging.py
src/bfd/validation/: backtesting.py  drift.py  leakage.py  metrics.py
src/cas/: __init__.py  cli.py
src/cas/agents/: graph.py  state.py
src/cas/agents/nodes/: base_prediction_node.py  committee_node.py  data_node.py  feature_node.py  macro_overlay_node.py  news_overlay_node.py  report_node.py
src/cas/dashboard/: __init__.py  data_loader.py  llm.py  ts2000_app.py
src/cas/reporting/: audit_trail.py  explanations.py  export.py
src/cas/utils/: io.py  logging.py  seeds.py  time.py
tests/: conftest.py
tests/integration/: test_graph_smoke.py
tests/unit/: test_committee.py  test_leakage.py  test_normalize.py  test_targets.py
