[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "borderline-firm-detector"
version = "0.1.0"
description = "Agentic pipeline that mimics the Korean credit rating process to flag borderline firms (한계기업) on KOSPI/KOSDAQ."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "원" }]
keywords = [
    "credit-rating",
    "korean-stock-market",
    "langgraph",
    "tabpfn",
    "explainable-boosting-machine",
    "borderline-firm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]

# Pinned ranges chosen for compatibility with TabPFN v2.5 (torch >=2.2)
# and LangGraph >= 0.2 state/reducer API.
dependencies = [
    # --- Orchestration ---------------------------------------------------
    "langgraph>=0.2.60,<0.5",
    "langchain-core>=0.3.0,<0.4",
    "langchain-anthropic>=0.3.0,<0.4",
    # --- Tabular models --------------------------------------------------
    "tabpfn>=2.5.0,<3.0",
    "lightgbm>=4.3.0,<5.0",
    "interpret>=0.6.4,<0.8",
    "scikit-learn>=1.5.0,<2.0",
    # --- Data stack ------------------------------------------------------
    "pandas>=2.2.0",
    "polars>=1.0.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=15.0.0",
    # --- Validation / schema --------------------------------------------
    "pandera[pandas]>=0.20.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    # --- Config ----------------------------------------------------------
    "hydra-core>=1.3.2",
    "omegaconf>=2.3.0",
    "python-dotenv>=1.0.0",
    # --- External data ---------------------------------------------------
    "httpx>=0.27.0",
    "tenacity>=8.2.0",
    # --- RAG -------------------------------------------------------------
    "chromadb>=0.5.0",
    # --- Logging ---------------------------------------------------------
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "types-PyYAML",
]
viz = [
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
    "shap>=0.45.0",
]

[project.urls]
Repository = "https://github.com/LADTO-develop/Corporate-Analysis-System"
Issues = "https://github.com/LADTO-develop/Corporate-Analysis-System/issues"

[project.scripts]
bfd-build-dataset = "scripts.build_dataset:main"
bfd-train = "scripts.train_market_model:main"
bfd-evaluate = "scripts.evaluate:main"
bfd-agent = "scripts.run_agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/bfd"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",     # pycodestyle / pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "SIM",              # flake8-simplify
    "RUF",              # ruff-specific
    "ANN",              # flake8-annotations
    "D",                # pydocstyle (relaxed below)
]
ignore = [
    "D100", "D104", "D107",     # don't require module/package/__init__ docstrings
    "ANN101", "ANN102",         # self / cls annotations not required
    "E501",                      # handled by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]
"scripts/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tabpfn.*", "interpret.*", "lightgbm.*", "chromadb.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that require the full pipeline",
    "requires_llm: marks tests that require an LLM API key",
    "requires_gpu: marks tests that require a GPU",
]

[tool.coverage.run]
source = ["src/bfd"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
