[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "corporate-analysis-system"
version = "0.1.0"
description = "LangGraph-based corporate investment suitability analysis system."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Apache-2.0" }
authors = [{ name = "Corporate Analysis System" }]
keywords = ["corporate-analysis", "investment-review", "langgraph", "workflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "langgraph>=0.2.60,<0.5",
    "pandas>=2.2.0",
    "numpy>=1.26,<3.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.7.0",
    "PyYAML>=6.0.1",
    "python-dotenv>=1.0.0",
    "structlog>=24.1.0",
    "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
    "ipykernel>=6.29.0",
    "types-PyYAML",
]
viz = [
    "matplotlib>=3.9.0",
    "plotly>=5.22.0",
]

[project.urls]
Repository = "https://github.com/LADTO-develop/Corporate-Analysis-System"
Issues = "https://github.com/LADTO-develop/Corporate-Analysis-System/issues"

[project.scripts]
cas-agent = "cas.cli:main"
corporate-analysis-agent = "cas.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cas"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF", "ANN", "D"]
ignore = ["D100", "D104", "D107", "ANN101", "ANN102", "E501"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D", "ANN"]
"scripts/**/*.py" = ["D"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["langgraph.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests that exercise the end-to-end pipeline",
]

[tool.coverage.run]
source = ["src/cas"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
